--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -55,6 +55,6 @@ label[class*='lang-'] {
     background: #ecf0f5;
 }
 
-.nav-tabs-languages ul.nav-tabs > li.active > a {
+.nav-tabs-languages ul.nav-tabs > li.active > a,.nav-tabs-languages ul.nav-tabs > li:hover > a {
     background-color: #ecf0f5;
 }
